--- a/source/1.Getting_Started/3.Shaders/5.Exercise_Qn2.cpp.in
+++ b/source/1.Getting_Started/3.Shaders/5.Exercise_Qn2.cpp.in
@@ -17,7 +17,13 @@ void processInput(GLFWwindow* window) {
     }
 }
 
-float vertices[] = {-0.5f, -0.5f, 0.0f, 0.5f, -0.5f, 0.0f, 0.0f, 0.5f, 0.0f};
+// clang-format off
+float vertices[] = {
+    -0.5f, -0.5f, 0.0f, 
+    0.5f, -0.5f, 0.0f, 
+    0.0f, 0.5f, 0.0f
+};
+// clang-format on
 
 int main() {
     glfwInit();
