--- a/source/1.Getting_Started/3.Shaders/5.Exercise_Qn2.cpp.in
+++ b/source/1.Getting_Started/3.Shaders/5.Exercise_Qn2.cpp.in
@@ -12,13 +12,12 @@ void framebuffer_size_callback(
         __attribute__((unused)) GLFWwindow* window, int width, int height) {
     glViewport(0, 0, width, height);
 }
-#elif defined(__MSC_VER)
-void framebuffer_size_callback(
-        GLFWwindow* window, int width, int height) {
+#elif defined(_MSC_VER)
+void framebuffer_size_callback(GLFWwindow* window, int width, int height) {
+    (void)window;
     glViewport(0, 0, width, height);
 }
 #endif
-
 
 void processInput(GLFWwindow* window) {
     if (glfwGetKey(window, GLFW_KEY_ESCAPE) == GLFW_PRESS) {
@@ -41,8 +40,7 @@ int main() {
     glfwWindowHint(GLFW_OPENGL_PROFILE, GLFW_OPENGL_CORE_PROFILE);
     // glfwWindowHint(GLFW_OPENGL_FORWARD_COMPAT, GL_TRUE);
 
-    GLFWwindow* window =
-            glfwCreateWindow(800, 600, "Offset", NULL, NULL);
+    GLFWwindow* window = glfwCreateWindow(800, 600, "Offset", NULL, NULL);
     if (window == NULL) {
         std::cerr << "Failed to create GLFW window" << std::endl;
         glfwTerminate();
