--- a/source/1.Getting_Started/3.Shaders/6.Exercise_Qn3.cpp.in
+++ b/source/1.Getting_Started/3.Shaders/6.Exercise_Qn3.cpp.in
@@ -12,9 +12,9 @@ void framebuffer_size_callback(
         __attribute__((unused)) GLFWwindow* window, int width, int height) {
     glViewport(0, 0, width, height);
 }
-#elif defined(__MSC_VER)
-void framebuffer_size_callback(
-        GLFWwindow* window, int width, int height) {
+#elif defined(_MSC_VER)
+void framebuffer_size_callback(GLFWwindow* window, int width, int height) {
+    (void)window;
     glViewport(0, 0, width, height);
 }
 #endif
@@ -32,7 +32,6 @@ float vertices[] = {
     0.0f, 0.5f, 0.0f
 };
 // clang-format on
-
 
 int main() {
     glfwInit();
