Going easy on GLM in windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -258,7 +258,8 @@ function(buildFileWithGLM)
     set_property(TARGET ${TARGET_NM} PROPERTY CXX_STANDARD 11)
  
     if(MSVC)
-        target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
+        # target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
+        target_compile_options(${TARGET_NM} PRIVATE /W4)
     else()
         target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -pedantic -Werror)
     endif()
@@ -326,7 +327,9 @@ function(buildFileWithNoise)
     set_property(TARGET ${TARGET_NM} PROPERTY CXX_STANDARD 11)
 
     if(MSVC)
-        target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
+        # Go easy on GLM
+        # target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
+        target_compile_options(${TARGET_NM} PRIVATE /W4)
     else()
         target_compile_options(${TARGET_NM} PRIVATE -Wall -Wextra -Wconversion -pedantic -Werror)
     endif()
