When using fastnoise or imgui, ignore warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,13 +341,13 @@ function(buildFileWithNoise)
     if(MSVC)
         # Go easy on GLM and IMGUI
         # target_compile_options(${TARGET_NM} PRIVATE /W4 /WX)
-         if(USE_IMGUI)
+        if(${USE_IMGUI} OR ${USE_NOISE})
             target_compile_options(${TARGET_NM} PRIVATE /W4)
         else()
             target_compile_options(${TARGET_NM} PRIVATE /W4)
         endif()
     else()
-        if(USE_IMGUI)
+        if(${USE_IMGUI} OR ${USE_NOISE})
             target_compile_options(${TARGET_NM} PRIVATE 
                 -Wall -Wextra -Wconversion -pedantic)
         else()
