--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: fetch submodules
-    - run: |
-        git submodule init
-        git submodule update
+      run: git submodule init
+    - name: update submodules
+      run: git submodule update
     - name: generate make files
       run: cmake .
     - name: compile
