--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,6 @@ build_script:
     - git submodule update
     - md build
     - cd build
+    - cmake --version
     - cmake ..
     - cmake --build .
